implemented search and custom filter

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/windows,visualstudiocode
 
 content/images/*
+Custom_Web_Application_Development_Checklist__Evidences.docx
